--- a/web/src/components/blog-post-preview.module.css
+++ b/web/src/components/blog-post-preview.module.css
@@ -1,20 +1,26 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .root {
-  display: blog;
   color: inherit;
   text-decoration: none;
+  height: 100%;
+  position: relative;
+  display: flex;
+
+  background: rgb(0, 206, 208);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 206, 208, 0) 3%,
+    rgba(0, 206, 208, 0.5) 100%,
+    rgba(0, 206, 208, 0.5046393557422969) 100%
+  );
+  padding: 1em 0rem;
+  border-radius: 1.5rem;
 }
 
 .inList {
   composes: root;
-
-  @media (--media-min-medium) {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-gap: 2em;
-  }
 }
 
 .inGrid {
@@ -22,12 +28,14 @@
 }
 
 .leadMediaThumb {
-  position: relative;
-  padding-bottom: 66.666%;
-  background: var(--color-very-light-gray);
+  height: 100%;
+  padding: 14rem 0rem;
+  border-radius: 1.5rem;
 
   @nest & img {
     position: absolute;
+    z-index: -9999;
+    border-radius: 1.5rem;
     top: 0;
     left: 0;
     width: 100%;
@@ -38,30 +46,40 @@
 
 .text {
   /* empty */
+  padding: 0rem 1.5rem;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 100%;
+  justify-content: flex-end;
 }
 
 .title {
-  @media (hover: hover) {
-    @nest .root:hover & {
-      text-decoration: underline;
-    }
-  }
-
   @media (--media-min-medium) {
     @nest .inList & {
-      margin-top: 0;
+      font-size: 1.5rem;
+      font-family: yasser;
     }
   }
 }
 
 .excerpt {
   @nest & p {
-    margin: 0.5em 0;
+    padding: 0rem 0rem;
+    margin: 1rem 0rem;
   }
 
   @nest & strong {
     font-weight: 600;
   }
+}
+.button {
+  padding: 1.5rem 2rem;
+  background-color: #f4468f;
+  border-radius: 1rem;
+  box-shadow: 0px 15px 20px 0px #000000 5%;
+  font-weight: 700;
 }
 
 .date {
