--- a/web/src/styles/custom-properties.css
+++ b/web/src/styles/custom-properties.css
@@ -1,5 +1,5 @@
 :root {
-  --font-family-sans: "Source Sans Pro", sans-serif;
+  --font-family-sans: "yasser", sans-serif;
 
   --color-black: #202123;
   --color-dark-gray: #32373e;
