--- a/web/src/components/hero.module.css
+++ b/web/src/components/hero.module.css
@@ -4,6 +4,7 @@
   border-radius: 1.5rem;
   margin: 1.2rem 0rem;
   padding: 1.5rem 2rem;
+  background-color: aqua;
   outline: 2px solid transparent;
 }
 .button:focus {
