--- a/web/src/components/blog/blog-post-preview.module.css
+++ b/web/src/components/blog/blog-post-preview.module.css
@@ -40,7 +40,7 @@
   flex-direction: column;
   align-items: flex-start;
   height: 100%;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .excerpt {
